--- a/website2/index.html
+++ b/website2/index.html
@@ -28,9 +28,51 @@
 </article>
 
 <article>
+  <h1>The Infamous</h1>
+  <img src="D:\Forensic Computing\Unit 28 - Website Production\Other Work\website2\images\The Infamous.jfif">
+  <p>Artist: Mobb Deep<br>Released: April 25, 1995</p>
+</article>
+
+<article>
   <h1>Liquid Swords</h1>
   <img src="D:\Forensic Computing\Unit 28 - Website Production\Other Work\website2\images\Liquid Swords.jfif">
   <p>Artist: GZA<br>Released: November 7, 1995</p>
+</article>
+
+<article>
+  <h1>Beats, Rhymes, and Life</h1>
+  <img src="D:\Forensic Computing\Unit 28 - Website Production\Other Work\website2\images\Beats, Rhymes, and Life.jpg">
+  <p>Artist: A Tribe Called Quest<br>Released: June 30, 1996</p>
+</article>
+
+<article>
+  <h1>Hell On Earth</h1>
+  <img src="D:\Forensic Computing\Unit 28 - Website Production\Other Work\website2\images\Hell On Earth.jfif">
+  <p>Artist: Mobb Deep<br>Released: November 19, 1996</p>
+</article>
+
+<article>
+  <h1>Moment of Truth</h1>
+  <img src="D:\Forensic Computing\Unit 28 - Website Production\Other Work\website2\images\Moment of Truth.jfif">
+  <p>Artist: Gang Starr<br>Released: March 31, 1998</p>
+</article>
+
+<article>
+  <h1>Illmatic</h1>
+  <img src="D:\Forensic Computing\Unit 28 - Website Production\Other Work\website2\images\Illmatic.jfif">
+  <p>Artist: Nas<br>Released: April 19, 1994</p>
+</article>
+
+<article>
+  <h1>The Low End Theory</h1>
+  <img src="D:\Forensic Computing\Unit 28 - Website Production\Other Work\website2\images\The Low End Theory.jfif">
+  <p>Artist: A Tribe Called Quest<br>Released: September 24, 1991</p>
+</article>
+
+<article>
+  <h1>Only Built 4 Cuban Linx</h1>
+  <img src="D:\Forensic Computing\Unit 28 - Website Production\Other Work\website2\images\Only Built 4 Cuban Linx.jfif">
+  <p>Artist: Raekwon<br>Released: August 1, 1995</p>
 </article>
 
   </body>
